--- a/landing_page.html
+++ b/landing_page.html
@@ -1,11 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+    <link rel="stylesheet" href="style.css">
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <script src="https://cdn.tailwindcss.com"></script>
-
+    <script src="script.js" defer></script>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.3.0/font/bootstrap-icons.css" />
     <link rel="stylesheet" href="/src/login-alert-popup.css" />
 
     <title>ROBOVENTS</title>
@@ -15,6 +17,7 @@
     <top-nav
       class="navbar flex flex-row shadow-xl w-screen text-white opacity-80 items-center px-6 py-4 space-between fixed z-10 left-0 right-0 top-0 bg-black"
     >
+      <i class="bi bi-brightness-high-fill" id="toggleDark"></i>
       <div class="flex flex-grow">
         <img src="src/assets/robovitics-logo.png" class="w-40 h-8" alt="logo" />
       </div>
